other Features added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <body>
         <h1>Subhan Zaheer</h1>
         <h2>Introduction</h2>
+        <p>Getting CS degree from UET Lahore.
+            Html, C++,Java Script </p>
         <h2>Education</h2>
+        <ol>
+            <li>Matric 88%</li>
+            <li>ICS 81%</li>
+            <li>UET Aggregate 72.29</li>
+        </ol>
     </body>
 
 </html>
