--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <li>ICS 81%</li>
             <li>UET Aggregate 72.29</li>
         </ol>
+        <a href="https://www.Subhan.blog">My Blog</a>
+        <a href="https://facebook.com/profile.php?id=100007715835077">My FB ID</a>
     </body>
 
 </html>
