--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="https://facebook.com/profile.php?id=100007715835077">My FB ID</a>
         <br/>
         <a href="./about.html">About Me page</a>
+        <img src="./images/images.jpg">
         <br/>
     </body>
 
