--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Web dev Session HTML </title>
     </head>
     <body>
+       <div>
         <h1>Subhan Zaheer</h1>
         <h2>Introduction</h2>
         <p>Getting CS degree from UET Lahore.
@@ -14,6 +15,7 @@
             <li>ICS 81%</li>
             <li>UET Aggregate 72.29</li>
         </ol>
+       </div>
         <a href="https://www.Subhan.blog">My Blog</a>
         <br/>
         <a href="https://facebook.com/profile.php?id=100007715835077">My FB ID</a>
