Implementing another div

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li>UET Aggregate 72.29</li>
         </ol>
        </div>
+       <div>
         <a href="https://www.Subhan.blog">My Blog</a>
         <br/>
         <a href="https://facebook.com/profile.php?id=100007715835077">My FB ID</a>
@@ -23,6 +24,7 @@
         <a href="./about.html">About Me page</a>
         <br/>
         <img src="./images/images.jpg">
+       </div>
     </body>
 
 </html>
