learn some shortcuts

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 
     <head>
         <title> Web dev Session HTML </title>
@@ -23,8 +23,9 @@
             <br/>
             <a href="./about.html">About Me page</a>
             <br/>
-            <img src="./images/images.jpg">
+            <img src="./images/images.jpg" alt="pixel 5">
        </div>
+      
     </body>
 
 </html>
