Jump added in page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Web dev Session HTML </title>
     </head>
     <body>
+        <a href="#jump">Jump</a>
        <div>
             <h1>Subhan Zaheer</h1>
             <h2>Introduction</h2>
@@ -25,6 +26,45 @@
             <br/>
             <img src="./images/images.jpg" alt="pixel 5">
        </div>
+       <br/>
+       <div>
+        <h1>Subhan Zaheer</h1>
+        <h2>Introduction</h2>
+        <p>Getting CS degree from UET Lahore.
+            Html, C++,Java Script </p>
+        <h2>Education</h2>
+        <ol>
+            <li>Matric 88%</li>
+            <li>ICS 81%</li>
+            <li>UET Aggregate 72.29</li>
+        </ol>
+   </div>
+   <br/>
+   <div>
+    <h1>Subhan Zaheer</h1>
+    <h2>Introduction</h2>
+    <p>Getting CS degree from UET Lahore.
+        Html, C++,Java Script </p>
+    <h2>Education</h2>
+    <ol>
+        <li>Matric 88%</li>
+        <li>ICS 81%</li>
+        <li>UET Aggregate 72.29</li>
+    </ol>
+</div>
+    <br/>
+    <div id="jump">
+    <h1> Jump kr k ana Subhan Zaheer</h1>
+    <h2>Introduction</h2>
+    <p>Getting CS degree from UET Lahore.
+        Html, C++,Java Script </p>
+    <h2>Education</h2>
+    <ol>
+        <li>Matric 88%</li>
+        <li>ICS 81%</li>
+        <li>UET Aggregate 72.29</li>
+    </ol>
+</div>
       
     </body>
 
